--- a/llama.ipynb
+++ b/llama.ipynb
@@ -728,13 +728,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
@@ -810,6 +803,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def format_amazon(text, label):\n",
+    "    return \"A customer wrote the following review:\\n{}\\nThe sentiment in this review is {}.\".format(text,  [\"negative\", \"positive\"][label])\n",
+    "\n",
+    "def make_training_data(model, tokenizer, data, format=format_amazon, n=200):\n",
+    "\n",
+    "    model.eval()\n",
+    "    all_neg_hs, all_pos_hs, all_gt_labels, all_text = [], [], [], []\n",
+    "\n",
+    "    # loop\n",
+    "    for _ in tqdm(range(n)):\n",
+    "        # for simplicity, sample a random example until we find one that's a reasonable length\n",
+    "        # (most examples should be a reasonable length, so this is just to make sure)\n",
+    "        while True:\n",
+    "            idx = np.random.randint(len(data))\n",
+    "            text, true_label = data[idx][\"content\"], data[idx][\"label\"]\n",
+    "            # the actual formatted input will be longer, so include a bit of a marign\n",
+    "            if len(tokenizer(text)) < 400:  \n",
+    "                break\n",
+    "                \n",
+    "        # get hidden states\n",
+    "        neg_hs = llama_hs_from_text(model, tokenizer, format_amazon(text, 0))\n",
+    "        pos_hs = llama_hs_from_text(model, tokenizer, format_amazon(text, 1))\n",
+    "\n",
+    "        # collect\n",
+    "        all_neg_hs.append(neg_hs)\n",
+    "        all_pos_hs.append(pos_hs)\n",
+    "        all_gt_labels.append(true_label)\n",
+    "        all_text.append(text)\n",
+    "\n",
+    "    all_neg_hs = np.stack(all_neg_hs)\n",
+    "    all_pos_hs = np.stack(all_pos_hs)\n",
+    "    all_gt_labels = np.stack(all_gt_labels)\n",
+    "\n",
+    "    return all_neg_hs, all_pos_hs, all_gt_labels, all_text\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
@@ -857,107 +893,6 @@
     "lr = LogisticRegression(class_weight=\"balanced\", max_iter=1000)\n",
     "lr.fit(x_train, y_train)\n",
     "print(\"Logistic regression accuracy: {}\".format(lr.score(x_test, y_test)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def generate_next_from_set(\n",
-    "#     text,\n",
-    "#     options\n",
-    "# ):\n",
-    "#     inputs = tokenizer(text, return_tensors=\"pt\")\n",
-    "#     option_tokens = [tokenizer(x, return_tensors=\"pt\") for x in options]\n",
-    "\n",
-    "#     input_ids = inputs[\"input_ids\"].to(model.device)\n",
-    "#     option_ids = [x[\"input_ids\"].to(model.device) for x in option_tokens]\n",
-    "\n",
-    "\n",
-    "#     # temperature=0.1,\n",
-    "#     # top_p=0.75,\n",
-    "#     # top_k=40,\n",
-    "#     # num_beams=4,\n",
-    "#     max_new_tokens=128,\n",
-    "\n",
-    "#     generation_config = GenerationConfig(\n",
-    "#         temperature=temperature,\n",
-    "#         top_p=top_p,\n",
-    "#         top_k=top_k,\n",
-    "#         num_beams=num_beams,\n",
-    "#     )\n",
-    "#     outputs = model.generate(input_ids, return_dict_in_generate=True, output_scores=True, max_new_tokens=max_new_tokens)\n",
-    "\n",
-    "#     transition_scores = model.compute_transition_scores(\n",
-    "#         outputs.sequences, outputs.scores, normalize_logits=False\n",
-    "#     )\n",
-    "\n",
-    "#     print(transition_scores)\n",
-    "\n",
-    "#     # outputs = model.generate(**inputs, max_new_tokens=5, return_dict_in_generate=True, output_scores=True)\n",
-    "#     # transition_scores = model.compute_transition_scores(\n",
-    "#     #     outputs.sequences, outputs.scores, normalize_logits=True\n",
-    "#     # )\n",
-    "\n",
-    "#     # input_length = inputs.input_ids.shape[1]\n",
-    "#     # generated_tokens = outputs.sequences[:, input_length:]\n",
-    "#     # for tok, score in zip(generated_tokens[0], transition_scores[0]):\n",
-    "#     #   # | token | token string | logits | probability\n",
-    "#     #   print(f\"| {tok:5d} | {tokenizer.decode(tok):8s} | {score.numpy():.4f} | {np.exp(score.numpy()):.2%}\")\n",
-    "\n",
-    "#     # with torch.no_grad():\n",
-    "#     #   outputs = model(input_ids)\n",
-    "\n",
-    "#     # next_token_logits = outputs[\"logits\"]\n",
-    "\n",
-    "#     # print(outputs)\n",
-    "\n",
-    "#     # predictions = F.softmax(outputs.logits, dim=-1).detach().cpu()\n",
-    "\n",
-    "#     # print(predictions)\n",
-    "\n",
-    "#     # thresh = 1e-5\n",
-    "#     # vocab_size = predictions.shape[-1]\n",
-    "\n",
-    "#     # # Predictions has one sentence (index 0) and we look at the last token predicted (-1)\n",
-    "#     # idxs = torch.arange(0, vocab_size)[predictions[0][-1] >= thresh]\n",
-    "#     # print(tokenizer.convert_ids_to_tokens(idxs))\n",
-    "\n",
-    "#     # with torch.no_grad():\n",
-    "#     #     model()\n",
-    "#     #     generation_output = model.generate(\n",
-    "#     #         input_ids=input_ids,\n",
-    "\n",
-    "#     #         return_dict_in_generate=True,\n",
-    "#     #         output_scores=True,\n",
-    "#     #         max_new_tokens=max_new_tokens,\n",
-    "#     #     )\n",
-    "#     # s = generation_output.sequences[0]\n",
-    "#     # output = tokenizer.decode(s)\n",
-    "#     # return output\n",
-    "\n",
-    "# labels = []\n",
-    "\n",
-    "# for x in tqdm(text_test):\n",
-    "#   text = format_amazon_for_completion(x)\n",
-    "\n",
-    "#   tag_ids = tokenizer([\"Positive\", \"Negative\"], add_special_tokens=False).input_ids \n",
-    "\n",
-    "#   completion =generate(text, force_words_ids=[tag_ids], max_new_tokens=5)\n",
-    "\n",
-    "\n",
-    "#   result = completion[len(text):]\n",
-    "#   labels.append(1 if \"Positive\" in result else 0)\n",
-    "\n",
-    "# print(labels)\n",
-    "\n",
-    "# predictions = np.array(labels)\n",
-    "\n",
-    "# acc = (predictions == y_test).mean()\n",
-    "# acc = max(acc, 1 - acc)\n",
-    "# print(\"Naive generation accuracy: {}\".format(acc))\n"
    ]
   },
   {
@@ -1306,63 +1241,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Hoverable view (broken in this notebook)\n",
-    "# def plot_component_classification(preds1, preds2, y_real, texts):\n",
-    "#   fig = plt.figure()\n",
-    "#   ax = fig.add_subplot()\n",
-    "\n",
-    "#   # Make the grid\n",
-    "#   x, y = np.meshgrid(np.arange(-1, 1, 0.1),\n",
-    "#                         np.arange(-1, 1, 0.1))\n",
-    "    \n",
-    "#   colors = [\"red\" if y == 0  else \"green\" for y in y_real]\n",
-    "#   sc = ax.scatter(preds1, preds2, color=colors)\n",
-    "    \n",
-    "#   # setting title and labels\n",
-    "#   ax.set_title(\"Test Classsification\")\n",
-    "#   ax.set_xlabel('Component 0')\n",
-    "#   ax.set_ylabel('Component 1')\n",
-    "\n",
-    "#   annot = ax.annotate(\"\", xy=(0,0), xytext=(4,4),textcoords=\"offset points\",\n",
-    "#                       bbox=dict(boxstyle=\"round\", fc=\"w\"),\n",
-    "#                       arrowprops=dict(arrowstyle=\"->\"))\n",
-    "#   annot.set_color(\"white\")\n",
-    "#   annot.set_fontsize(8)\n",
-    "#   annot.set_wrap(True)\n",
-    "#   annot.get_bbox_patch().set_facecolor(\"black\")\n",
-    "#   annot.get_bbox_patch().set_alpha(0.8)\n",
-    "#   annot.set_visible(False)\n",
-    "  \n",
-    "#   def update_annot(ind):\n",
-    "#       pos = sc.get_offsets()[ind[\"ind\"][0]]\n",
-    "#       annot.xy = pos\n",
-    "#       text = \"{}, {}\".format(\" \".join(list(map(str,ind[\"ind\"]))), \n",
-    "#                             \" \".join([texts[n] for n in ind[\"ind\"]]))\n",
-    "#       annot.get_bbox_patch().set_facecolor(\"red\" if y_real[ind[\"ind\"][0]] == 0 else \"green\")\n",
-    "#       annot.set_text(text)\n",
-    "    \n",
-    "#   def hover(event):\n",
-    "#       vis = annot.get_visible()\n",
-    "#       if event.inaxes == ax:\n",
-    "#           cont, ind = sc.contains(event)\n",
-    "#           if cont:\n",
-    "#               update_annot(ind)\n",
-    "#               annot.set_visible(True)\n",
-    "#               fig.canvas.draw_idle()\n",
-    "#           else:\n",
-    "#               if vis:\n",
-    "#                   annot.set_visible(False)\n",
-    "#                   fig.canvas.draw_idle()\n",
-    "\n",
-    "#   fig.canvas.mpl_connect(\"motion_notify_event\", hover)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
    "outputs": [
@@ -1387,51 +1265,6 @@
     "# preds5 = predict(probes[0], pos_hs_train, neg_hs_train)\n",
     "# preds6 = predict(probes[0], pos_hs_train, neg_hs_train)\n",
     "plot_component_classification(preds1, preds2, y_test, text_test)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# examples = [\n",
-    "#     # \"The sky is red.\",\n",
-    "#     # \"The sky is blue.\",\n",
-    "#     # \"Roses are red.\",\n",
-    "#     # \"Roses are blue.\",\n",
-    "#     # \"France is in Europe.\",\n",
-    "#     # \"The United States is in Europe.\",\n",
-    "#     # \"France is in Asia.\",\n",
-    "#     # \"The United States is in Asia.\",\n",
-    "#     # \"George Washington was the first president.\",\n",
-    "#     # \"George Strait was the first president.\",\n",
-    "#     # \"George Washington was a country singer.\",\n",
-    "#     # \"George Strait was a country singer.\",\n",
-    "#     # \"China is in Asia\",\n",
-    "#     # \"Japan is in Asia\",\n",
-    "#     \"The sky is red\",\n",
-    "#     \"The sky is orange\",\n",
-    "#     \"The sky is yellow\",\n",
-    "#     \"The sky is green\",\n",
-    "#     \"The sky is blue\",\n",
-    "#     \"The sky is purple\",\n",
-    "#     \"The sky is black\",\n",
-    "# ]\n",
-    "\n",
-    "# true_ex = [\"Evaluate the following statement: \" + x + \" This statement is true.\" for x in examples]\n",
-    "# false_ex = [\"Evaluate the following statement: \" + x + \" This statement is false.\" for x in examples]\n",
-    "# labels = [0,1,1,0,1,0,0,0,1,0,0,1,1,1]\n",
-    "\n",
-    "# true_hs = np.array([get_llama_hidden_states(model, tokenizer, x) for x in true_ex])\n",
-    "# false_hs = np.array([get_llama_hidden_states(model, tokenizer, x) for x in false_ex])\n",
-    "\n",
-    "# classifications1 = predict(probes[0],true_hs, false_hs)\n",
-    "# classifications2 = predict(probes[1], true_hs, false_hs)\n",
-    "\n",
-    "\n",
-    "# plot_component_classification(classifications1, classifications2,  labels, examples)\n",
     "\n"
    ]
   },
@@ -1545,80 +1378,6 @@
     "\n",
     "- Decoding informed by CCS vector\n",
     "  - How? We're stuck being one step behind"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "200\n",
-      "Accuracies\n",
-      "[0.965, 0.91, 0.51, 0.025, 0.745]\n",
-      "Most confident expert\n",
-      "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      " 0 0 0 0 0 0 0 0 0 0 4 0 0]\n",
-      "And predictions...\n",
-      "[0 0 1 0 1 1 1 1 1 0 0 1 1 1 1 1 0 0 0 0 0 1 0 1 0 1 0 1 1 0 0 0 0 0 0 1 1\n",
-      " 0 1 1 1 0 1 0 0 0 1 0 0 1]\n",
-      "Final accuracy\n",
-      "0.965\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(len(y_test))\n",
-    "\n",
-    "# Array of (n_probes, n_items)\n",
-    "scores = [-predict_pairs(probe, neg_hs_test, pos_hs_test) if is_reversed(probe, neg_hs_test, pos_hs_test, y_test) else predict_pairs(probe, neg_hs_test, pos_hs_test) for probe in probes]\n",
-    "\n",
-    "predictions = [(probeScores < 0).astype(int) for probeScores in scores]\n",
-    "accuracies = [(probePredictions == y_test).mean() for probePredictions in predictions]\n",
-    "\n",
-    "print(\"Accuracies\")\n",
-    "print(accuracies)\n",
-    "\n",
-    "mostConfidentExpert = np.array([np.argmax(np.array([min(abs(scores[j][i]) - 0.5, 0) for j in range(len(probes))])) for i in range(len(y_test))])\n",
-    "\n",
-    "mostConfidentPredictions = np.array([([predictions[j][i] for j in range(len(probes))][mostConfidentExpert[i]]) for i in range(len(y_test))]) \n",
-    "print(\"Most confident expert\")\n",
-    "print(mostConfidentExpert[0:50])\n",
-    "print(\"And predictions...\")\n",
-    "print(mostConfidentPredictions[0:50])\n",
-    "\n",
-    "finalAcc = (mostConfidentPredictions == y_test).mean()\n",
-    "\n",
-    "print(\"Final accuracy\")\n",
-    "print(finalAcc)\n",
-    "\n",
-    "# # plt.figure()\n",
-    "# print(\"1: {}, 2: {}, 3: {}, 4: {}, 5: {} avg: {}\".format(probe0Acc, probe1Acc, probe2Acc, probe3Acc, probe4Acc, avgAcc))\n",
-    "\n",
-    "# plt.subplot(311)\n",
-    "\n",
-    "# plt.hist((probe1Weights))\n",
-    "\n",
-    "\n",
-    "# plt.subplot(312)\n",
-    "\n",
-    "# plt.hist((probe0CorrectWeights))\n",
-    "\n",
-    "\n",
-    "# plt.subplot(313)\n",
-    "\n",
-    "# plt.hist((probe0IncorrectWeights))\n",
-    "\n",
-    "\n",
-    "\n",
-    "# plt.subplot(312)\n",
-    "\n",
-    "# plt.hist((probe0Weights + probe1Weights + probe2Weights)/3)\n",
-    "\n",
-    "# plt.show()"
    ]
   },
   {
