--- a/llama.ipynb
+++ b/llama.ipynb
@@ -942,8 +942,6 @@
     "      \n",
     "    best_loss = np.inf\n",
     "    \n",
-    "    \n",
-    "\n",
     "    for train_num in range(ntries):\n",
     "        # Make a new probe for this run\n",
     "        probe = nn.Sequential(nn.Linear(d, 1), nn.Sigmoid())\n",
@@ -980,7 +978,6 @@
     "            best_loss = loss\n",
     "\n",
     "    return best_probe, best_loss\n",
-    "\n",
     "\n",
     "def predict_pairs(probe, x0, x1):\n",
     "  x0 = torch.tensor(x0, dtype=torch.float, requires_grad=False, device=model.device)\n",
@@ -1022,9 +1019,7 @@
     "  # this.\n",
     "  acc = (predictions == y_test).mean()\n",
     "\n",
-    "  return acc < 0.5\n",
-    "\n",
-    "\n"
+    "  return acc < 0.5"
    ]
   },
   {
